gitops/auth-service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: app-auth-service
  name: app-auth-service
  namespace: auth-service
spec:
  strategy:
    rollingUpdate:
      maxSurge: 50%
      maxUnavailable: 0
  replicas: 1
  selector:
    matchLabels:
      app: app-auth-service
  template:
    metadata:
      labels:
        app: app-auth-service
    spec:
      containers:
        - name: app-auth-service 
          image: ${ACCOUNT_ID}.dkr.ecr.us-east-1.amazonaws.com/togglemaster_auth-service:v1.0.0
          imagePullPolicy: Always
          resources:
            requests:
              cpu: "250m"
              memory: "206Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"

          startupProbe:
            httpGet:
              path: /health
              port: 8001
            failureThreshold: 180   # 180 * 1s = 3 minutos
            periodSeconds: 1
          readinessProbe:
            httpGet:
              path: /health
              port: 8001
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /health
              port: 8001
            initialDelaySeconds: 180
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3
